@@ -1,4 +1,5 @@
 May 13th, 2004: Alex Burger <alex_b@users.sourceforge.net>
+- Add support for /usr/local/etc/snmp and /usr/local/etc.
 - Added help text for user when a Perl module is not found when loading
   via 'require'.
 - Bug fix: debug log started time printed as serial instead of
